--- a/templates/index.html
+++ b/templates/index.html
@@ -7,25 +7,51 @@
 	<title>Tetris</title>
 
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+	<!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div id="tetris">
-	<canvas id="scene"></canvas>
-	<div id="gameOver">
-		<h1>Game Over !</h1>
-		<h3>Score: <span id="finalScore">0</span></h3>
-		<h2><a href="#" id="restart">Restart</a></h2>
-		
-	</div>
-	<div id="side">
-		<div id="info">
-			<h1 id="levelInfo">Level: <br><span id="level">1</span></h1>
-			<h2 id="scoreInfo">Score: <br><span id="score" >0</span></h2>
-			<div id="rewardInfo" class="invisible">+<span id="reward">0</span></div>
-			<canvas id="preview"></canvas>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">WebSiteName</a>
+			</div>
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Page 1</a></li>
+				<li><a href="#">Page 2</a></li>
+				<li><a href="#">Page 3</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container">
+		<div id="tetris">
+			<canvas id="scene"></canvas>
+			<div id="gameOver">
+				<h1>Game Over !</h1>
+				<h3>Score: <span id="finalScore">0</span></h3>
+				<h2><a href="/" id="restart">Restart</a></h2>
+				
+			</div>
+			<div id="side">
+				<div id="info">
+					<h1 id="levelInfo">Level: <br><span id="level">1</span></h1>
+					<h2 id="scoreInfo">Score: <br><span id="score" >0</span></h2>
+					<div id="rewardInfo" class="invisible">+<span id="reward">0</span></div>
+					<canvas id="preview"></canvas>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
 
 
 </body>
@@ -36,4 +62,6 @@
 		tetris.start();
 	})();
 </script>
+
+
 </html>
